--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -2,13 +2,14 @@
 $colors: (
 	light: (
 		text: (
-			100: hsl(var(--h) var(--s) 80%),
+			100: hsl(var(--h) 100% 80%),
 			200: hsl(var(--h) 43% 21%),
 			300: hsl(var(--h) 43% 14%),
 		),
 		surface: (
 			100: hsl(var(--h) var(--s) 100%),
-			200: hsl(var(--h) var(--s) 98%),
+			200: hsl(var(--h) var(--s) 96%),
+			300: hsl(var(--h) 70% 93%),
 		),
 		border: (
 			100: hsl(var(--h) 14% 83%)
@@ -30,6 +31,7 @@ $colors: (
 		surface: (
 			100: hsl(207 43% 9%),
 			200: hsl(207 43% 14%),
+			300: hsl(207 43% 17%),
 		),
 		others: (
 			'yellow': hsl(36 99% 70%),
@@ -51,6 +53,7 @@ $colors: (
 	--h: 229;
 	--s: 100%;
 	--l: 64%;
+	@include color-scheme(light)
 }
 
 [color-scheme='dark'] {
