--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,1 +1,28 @@
 @use './theme' as *;
+
+*,
+*::before,
+*::after {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
+body {
+	color: var(--text-200);
+	background-color: var(--surface-100);
+	font-family: 'Lato', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
+		Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.App {
+	min-height: 100vh;
+	display: grid;
+	grid-template-columns: repeat(12, 1fr);
+}
+
+.sidebar {
+	grid-row: 1 / -1;
+	grid-column: span 3;
+	max-width: 20rem;
+}
