--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -1,3 +1,4 @@
+@use '../../styles/globals' as *;
 // sidebar only styles go here...
 
 .sidebar {
@@ -18,8 +19,7 @@
 		height: 3rem;
 		gap: 0.5rem;
 		align-items: center;
-		text-transform: uppercase;
-		letter-spacing: 1px;
+		@extend %uppercase;
 		cursor: pointer;
 		background-color: var(--surface-200);
 		border-radius: 6px;
