--- a/src/styles/_page.scss
+++ b/src/styles/_page.scss
@@ -9,6 +9,11 @@
 .page {
 	animation: slideIn 250ms ease-in-out forwards;
 
+	&__title {
+		margin-top: 0.5rem;
+		font-size: clamp(1.25rem, 3vw + 1rem, 1.75rem)
+	}
+
 	&__subtitle {
 		@extend %uppercase;
 	}
