--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -10,6 +10,7 @@ $colors: (
 			100: hsl(var(--h) var(--s) 100%),
 			200: hsl(var(--h) var(--s) 96%),
 			300: hsl(var(--h) 70% 93%),
+			400: hsl(var(--h) 70% 90%),
 		),
 		border: (
 			100: hsl(var(--h) 14% 83%)
@@ -32,6 +33,7 @@ $colors: (
 			100: hsl(207 43% 9%),
 			200: hsl(207 43% 14%),
 			300: hsl(207 43% 17%),
+			400: hsl(207 43% 20%),
 		),
 		others: (
 			'yellow': hsl(36 99% 70%),
