--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -8,7 +8,7 @@
 	padding: 0;
 	box-sizing: border-box;
 	transition: all 0.15s ease-in-out;
-	transition-property: color, background-color;
+	transition-property: outline, color, background-color;
 }
 
 
