task component working ✅

--- a/src/components/TaskInput/TaskInput.scss
+++ b/src/components/TaskInput/TaskInput.scss
@@ -1,7 +1,7 @@
 @use '../../styles/globals';
 
 .task-input {
-	width: min(60%, 100%);
+	width: min(720px, 100%);
 	height: 2.5rem;
 	position: relative;
 	margin-top: 2rem;
