--- a/src/styles/_page.scss
+++ b/src/styles/_page.scss
@@ -3,11 +3,12 @@
 .pages {
 	grid-row: 1 / -1;
 	grid-column: calc(var(--sidebar-span) + 1) / -1;
-  padding: 2rem;
+	padding: clamp(1.5rem, 3vw, 2rem);
 }
 
 .page {
 	animation: slideIn 250ms ease-in-out forwards;
+	margin-top: clamp(1.5rem, 3vw, 2rem);
 
 	&__title {
 		margin-top: 0.5rem;
@@ -22,7 +23,7 @@
 @keyframes slideIn {
 	from {
 		opacity: 0;
-		transform: translateX(-50px);
+		transform: translateX(-20px);
 	}
 	to {
 		opacity: 1;
