--- a/src/components/Task/Task.scss
+++ b/src/components/Task/Task.scss
@@ -8,6 +8,8 @@
 	background-color: var(--surface-200);
 	height: var(--size);
 	border-radius: var(--brr);
+	position: relative;
+	animation: slideIn 0.2s ease-in-out forwards;
 
 	&__icon {
 		background-color: transparent;
@@ -77,10 +79,35 @@
 			border: none;
 		}
 	}
+
+	.edit-task {
+		position: absolute;
+		left: 2.5rem;
+		font: inherit;
+		background-color: var(--surface-200);
+		color: var(--text-200);
+		border: none;
+		height: 100%;
+		width: calc(100% - 2.5rem);
+		outline: 2px solid var(--surface-500);
+		padding: 0 1rem;
+		border-radius: var(--brr);
+	}
 }
 
 @keyframes drawTick {
 	to {
 		stroke-dashoffset: 0;
+	}
+}
+
+@keyframes slideIn {
+	from {
+		opacity: 0;
+		transform: translateX(-20px);
+	}
+	to {
+		opacity: 1;
+		transform: translateX(0);
 	}
 }
