--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -8,9 +8,8 @@
 	padding: 0;
 	box-sizing: border-box;
 	transition: all 0.15s ease-in-out;
-	transition-property: outline, color, background-color;
+	transition-property: border, outline, color, background-color;
 }
-
 
 body {
 	color: var(--text-200);
@@ -29,7 +28,7 @@ body {
 .sidebar {
 	grid-row: 1 / -1;
 	grid-column: span var(--sidebar-span);
-	max-width: 20rem;
+	max-width: 18rem;
 }
 
 header {
