--- a/src/components/TaskInput/TaskInput.scss
+++ b/src/components/TaskInput/TaskInput.scss
@@ -15,7 +15,7 @@
 		border-radius: 4px;
 		font: inherit;
 		color: var(--text-200);
-		padding: 0 1rem;
+		padding: 0 5.5rem 0 1rem;
 		outline-color: var(--surface-400);
 		outline-offset: 0px;
 
