--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -8,7 +8,7 @@
 	padding: 0;
 	box-sizing: border-box;
 	transition: all 0.15s ease-in-out;
-	transition-property:  background-color, border;
+	transition-property: background-color, border;
 }
 
 body {
@@ -23,12 +23,11 @@ body {
 	min-height: 100vh;
 	display: grid;
 	grid-template-columns: repeat(12, 1fr);
-}
+	overflow-y: hidden;
 
-.sidebar {
-	grid-row: 1 / -1;
-	grid-column: span var(--sidebar-span);
-	max-width: 18rem;
+	@media (width < 750px) {
+		grid-template-rows: 1fr 3.5rem;
+	}
 }
 
 header {
