--- a/src/styles/_page.scss
+++ b/src/styles/_page.scss
@@ -6,11 +6,11 @@
 	padding: clamp(1.5rem, 3vw, 2rem);
 	overflow-y: auto;
 
-	@media (width < 1100px) {
+	@media (max-width: 1100px) {
 		grid-column: 3 / -2;
 	}
 
-	@media (width < 750px) {
+	@media (max-width: 750px) {
 		grid-column: 1 / -1;
 		grid-row: 1;
 	}
